# WhatIfUni-Backend

./: .gitignore  Cargo.toml  README.md
src/: api.rs  database.rs  main.rs  methods.rs  models.rs  routes.rs
