[package]
name = "whatifuni-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
