[package]
name = "calissaydim-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rosu-v2 = { features = ["serialize"], version = "0.9.0" }
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["sqlite", "json", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
